<!--
  ~ Copyright (c) 2017 The sky Authors.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">ByeAD</string>
    <string name="news">网易新闻</string>
    <string name="news_start_ad">禁用启动广告</string>
    <string name="news_list_ad">禁用列表广告</string>
    <string name="news_start_ad_summary">网易新闻客户端启动时加载的广告</string>
    <string name="news_list_ad_summary">网易新闻客户端新闻列表中的广告</string>
    <string name="about">关于</string>
    <string name="ok">确定</string>
    <string name="version_x">版本：%s</string>
</resources>
