<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 The sky Authors.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="news_category"
        android:title="@string/news">

        <SwitchPreference
            android:key="news_start_ad"
            android:title="@string/news_start_ad"
            android:summary="@string/news_start_ad_summary"
            android:defaultValue="false"
            />

        <SwitchPreference
            android:key="news_list_ad"
            android:title="@string/news_list_ad"
            android:summary="@string/news_list_ad_summary"
            android:defaultValue="false"
            />

    </PreferenceCategory>

    <Preference
        android:key="about"
        android:title="@string/about"
        />

</PreferenceScreen>